--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,13 @@ jobs:
   Windows-Build:
     runs-on: windows-latest
     env:
-      VS_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\
-      MSBUILD_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\
+      VS_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\
+      MSBUILD_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\
     steps:
       - name: Generate projects
         shell: cmd
         run: |
+          dir
           cd test
           ..\vendor\premake5.exe vs2019
       - name: Build Projects
