--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,10 @@ jobs:
       - name: Generate projects
         shell: cmd
         run: |
-          cd ${{github.workspace}}\test
-          ..\vendor\premake5.exe vs2019
+          cd "${{github.workspace}}\test"
+          "..\vendor\premake5.exe" vs2019
       - name: Build Projects
         shell: cmd
         run: |
           call "%VS_PATH%\VC\Auxiliary\Build\vcvars64.bat"
-          msbuild ..\scripts\test-workspace.sln
+          msbuild "..\scripts\test-workspace.sln"
