--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,18 @@
 name: build
 on: [ push ]
 jobs:
-  Windows-Build:
-    runs-on: windows-latest
+  windows-build:
+    runs-on: windows-2019
     env:
       VS_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\
       MSBUILD_PATH: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\
     steps:
-      - name: Generate projects
+      - name: generate projects
         shell: cmd
         run: |
+          dir ${{github.workspace}}
           "${{github.workspace}}\vendor\premake5.exe" vs2019 --file="${{github.workspace}}\test\premake5.lua"
-      - name: Build Projects
+      - name: build projects
         shell: cmd
         run: |
-          call "%VS_PATH%\VC\Auxiliary\Build\vcvars64.bat"
-          msbuild "${{github.workspace}}\scripts\test-workspace.sln"
+          "%MSBUILD_PATH%\MSBuild.exe" "${{github.workspace}}\scripts\test-workspace.sln"
