--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - name: generate projects
         shell: cmd
         run: |
-          dir ${{github.workspace}}
+          dir D:\a
           "${{github.workspace}}\vendor\premake5.exe" vs2019 --file="${{github.workspace}}\test\premake5.lua"
       - name: build projects
         shell: cmd
