--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - name: generate projects
         run: |
-          vendor/premake5 gmake --file=test/premake5.lua
+          ${{github.workspace}}/vendor/premake5 gmake --file=${{github.workspace}}/test/premake5.lua
       - name: build projects
         run: |
-          make -C scripts
+          make -C ${{github.workspace}}/scripts
